@@ -1,19 +1,18 @@
 package healthy.lifestyle.backend.admin.users.repository;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
-import healthy.lifestyle.backend.data.DataConfiguration;
-import healthy.lifestyle.backend.data.DataHelper;
+import healthy.lifestyle.backend.config.BeanConfig;
+import healthy.lifestyle.backend.config.ContainerConfig;
 import healthy.lifestyle.backend.users.model.Country;
 import healthy.lifestyle.backend.users.model.Role;
 import healthy.lifestyle.backend.users.model.User;
+import healthy.lifestyle.backend.util.DbUtil;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -29,12 +28,12 @@ import org.testcontainers.utility.DockerImageName;
 
 @SpringBootTest
 @Testcontainers
-@Import(DataConfiguration.class)
+@Import(BeanConfig.class)
 public class UserAdminRepositoryTest {
 
     @Container
     static PostgreSQLContainer<?> postgresqlContainer =
-            new PostgreSQLContainer<>(DockerImageName.parse("postgres:12.15"));
+            new PostgreSQLContainer<>(DockerImageName.parse(ContainerConfig.POSTGRES));
 
     @DynamicPropertySource
     static void postgresProperties(DynamicPropertyRegistry registry) {
@@ -47,21 +46,16 @@ public class UserAdminRepositoryTest {
     UserAdminRepository userAdminRepository;
 
     @Autowired
-    DataHelper dataHelper;
+    DbUtil dbUtil;
 
     @BeforeEach
     void beforeEach() {
-        dataHelper.deleteAll();
-    }
-
-    @Test
-    void postgresqlContainerTest() {
-        assertThat(postgresqlContainer.isRunning()).isTrue();
+        dbUtil.deleteAll();
     }
 
     @ParameterizedTest
-    @MethodSource("multipleValidFilters")
-    void findByFiltersTest_shouldReturnListOfUsers_whenValidFilterGiven(
+    @MethodSource("multipleFilters")
+    void findByFiltersTest_shouldReturnListOfUsers(
             String roleName,
             String username,
             String email,
@@ -71,16 +65,16 @@ public class UserAdminRepositoryTest {
             List<Integer> resultSeeds) {
 
         // Given
-        Role roleUser = dataHelper.createRole("ROLE_USER");
-        Role roleAdmin = dataHelper.createRole("ROLE_ADMIN");
+        Role roleUser = dbUtil.createUserRole();
+        Role roleAdmin = dbUtil.createAdminRole();
 
-        Country country1 = dataHelper.createCountry(1);
-        Country country2 = dataHelper.createCountry(2);
+        Country country1 = dbUtil.createCountry(1);
+        Country country2 = dbUtil.createCountry(2);
 
-        User user1 = dataHelper.createUser("1", roleUser, country1, null, 34);
-        User user2 = dataHelper.createUser("2", roleUser, country2, null, 16);
-        User admin1 = dataHelper.createUser("3", roleAdmin, country2, null, 45);
-        User admin2 = dataHelper.createUser("4", roleAdmin, country2, null, 21);
+        User user1 = dbUtil.createUser(1, roleUser, country1, 34);
+        User user2 = dbUtil.createUser(2, roleUser, country2, 16);
+        User admin1 = dbUtil.createUser(3, roleAdmin, country2, 45);
+        User admin2 = dbUtil.createUser(4, roleAdmin, country2, 21);
 
         Optional<Role> roleFilter = Stream.of(roleUser, roleAdmin)
                 .filter(role -> role.getName().equals(roleName))
@@ -99,40 +93,86 @@ public class UserAdminRepositoryTest {
 
         assertEquals(resultSeeds.size(), result.size());
         for (int i = 0; i < resultSeeds.size(); i++) {
-            assertEquals("username-" + resultSeeds.get(i), result.get(i).getUsername());
+            assertEquals("Username-" + resultSeeds.get(i), result.get(i).getUsername());
             assertEquals(
-                    "username-" + resultSeeds.get(i) + "@email.com",
-                    result.get(i).getEmail());
-            assertEquals("Full Name " + resultSeeds.get(i), result.get(i).getFullName());
+                    "email-" + resultSeeds.get(i) + "@email.com", result.get(i).getEmail());
         }
     }
 
-    static Stream<Arguments> multipleValidFilters() {
+    static Stream<Arguments> multipleFilters() {
         return Stream.of(
-                Arguments.of(null, null, null, null, null, null, List.of(1, 2, 3, 4)),
-                Arguments.of(
-                        "ROLE_USER", "NameUser", "FullNameUser", "EmailUser", "Country 3", 78, Collections.emptyList()),
+                // Positive cases for ROLE_USER
                 Arguments.of("ROLE_USER", null, null, null, null, null, List.of(1, 2)),
                 Arguments.of(
-                        "ROLE_USER", "username-1", "username-1@email.com", "Full Name 1", "Country 1", 34, List.of(1)),
-                Arguments.of("ROLE_USER", "username-1", null, null, null, null, List.of(1)),
-                Arguments.of("ROLE_USER", null, "username-2@email.com", null, null, null, List.of(2)),
-                Arguments.of("ROLE_USER", null, null, "Full Name 1", null, null, List.of(1)),
+                        "ROLE_USER", "Username-1", "email-1@email.com", "Full Name One", "Country 1", 34, List.of(1)),
+                Arguments.of("ROLE_USER", "Username-1", null, null, null, null, List.of(1)),
+                Arguments.of("ROLE_USER", null, "email-2@email.com", null, null, null, List.of(2)),
+                Arguments.of("ROLE_USER", null, null, "Full Name One", null, null, List.of(1)),
                 Arguments.of("ROLE_USER", null, null, null, "Country 2", null, List.of(2)),
                 Arguments.of("ROLE_USER", null, null, null, null, 16, List.of(2)),
-                Arguments.of("ROLE_ADMIN", "username-4", null, null, null, null, List.of(4)),
-                Arguments.of("ROLE_ADMIN", null, "username-3@email.com", null, null, null, List.of(3)),
-                Arguments.of("ROLE_ADMIN", null, null, "Full Name 3", null, null, List.of(3)),
+
+                // Negative cases for ROLE_USER
+                Arguments.of(
+                        "ROLE_USER",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        100,
+                        Collections.emptyList()),
+                Arguments.of("ROLE_USER", "NonExistentValue", null, null, null, null, Collections.emptyList()),
+                Arguments.of("ROLE_USER", null, "NonExistentValue", null, null, null, Collections.emptyList()),
+                Arguments.of("ROLE_USER", null, null, "NonExistentValue", null, null, Collections.emptyList()),
+//                Arguments.of("ROLE_USER", null, null, null, "Country 100", null, Collections.emptyList()),
+                Arguments.of("ROLE_USER", null, null, null, null, 100, Collections.emptyList()),
+
+                // Positive cases for ROLE_ADMIN
+                Arguments.of("ROLE_ADMIN", null, null, null, null, null, List.of(3, 4)),
+                Arguments.of(
+                        "ROLE_ADMIN", "Username-4", "email-4@email.com", "Full Name Four", "Country 2", 21, List.of(4)),
+                Arguments.of("ROLE_ADMIN", "Username-4", null, null, null, null, List.of(4)),
+                Arguments.of("ROLE_ADMIN", null, "email-3@email.com", null, null, null, List.of(3)),
+                Arguments.of("ROLE_ADMIN", null, null, "Full Name Three", null, null, List.of(3)),
                 Arguments.of("ROLE_ADMIN", null, null, null, "Country 2", null, List.of(3, 4)),
                 Arguments.of("ROLE_ADMIN", null, null, null, null, 45, List.of(3)),
+
+                // Negative cases for ROLE_ADMIN
                 Arguments.of(
-                        "ROLE_ADMIN", "username-4", "username-4@email.com", "Full Name 4", "Country 2", 21, List.of(4)),
-                Arguments.of("ROLE_ADMIN", null, null, null, null, null, List.of(3, 4)),
-                Arguments.of(null, "username-2", null, null, null, null, List.of(2)),
-                Arguments.of(null, null, "username-3@email.com", null, null, null, List.of(3)),
-                Arguments.of(null, null, null, "Full Name 2", null, null, List.of(2)),
-                Arguments.of(null, null, null, null, "Country 2", null, List.of(2, 3, 4)),
+                        "ROLE_ADMIN",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        100,
+                        Collections.emptyList()),
+                Arguments.of("ROLE_ADMIN", "NonExistentValue", null, null, null, null, Collections.emptyList()),
+                Arguments.of("ROLE_ADMIN", null, "NonExistentValue", null, null, null, Collections.emptyList()),
+                Arguments.of("ROLE_ADMIN", null, null, "NonExistentValue", null, null, Collections.emptyList()),
+//                Arguments.of("ROLE_ADMIN", null, null, null, "Country 100", null, Collections.emptyList()),
+                Arguments.of("ROLE_ADMIN", null, null, null, null, 100, Collections.emptyList()),
+
+                // Positive cases for all roles
+                Arguments.of(null, null, null, null, null, null, List.of(1, 2, 3, 4)),
+                Arguments.of(null, "Username-2", null, null, null, null, List.of(2)),
+                Arguments.of(null, null, "email-3@email.com", null, null, null, List.of(3)),
+                Arguments.of(null, null, null, "Full Name Two", null, null, List.of(2)),
                 Arguments.of(null, null, null, null, "Country 1", null, List.of(1)),
-                Arguments.of(null, null, null, null, null, 21, List.of(4)));
+                Arguments.of(null, null, null, null, "Country 2", null, List.of(2, 3, 4)),
+                Arguments.of(null, null, null, null, null, 21, List.of(4)),
+
+                // Negative cases for all roles
+                Arguments.of(
+                        null,
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        "NonExistentValue",
+                        100,
+                        Collections.emptyList()),
+                Arguments.of(null, "NonExistentValue", null, null, null, null, Collections.emptyList()),
+                Arguments.of(null, null, "NonExistentValue", null, null, null, Collections.emptyList()),
+                Arguments.of(null, null, null, "NonExistentValue", null, null, Collections.emptyList()),
+//                Arguments.of(null, null, null, null, "Country 100", null, Collections.emptyList()),
+                Arguments.of(null, null, null, null, null, 100, Collections.emptyList()));
     }
 }
